--- a/python_plugins/README
+++ b/python_plugins/README
@@ -1,3 +1,3 @@
 Use of foot print wizard:
  - Linux: ~/.kicad_plugins/
- - Windows: InstallPath\bin\scripting\plugins
+ - Windows: InstallPath\KiCad\share\kicad\scripting\plugins
